reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__replay__report.rs_line_67_col_5.log

*** crates/tracewake-core/src/replay/report.rs:67:5: replace run_replay -> ReplayReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/replay/report.rs
+++ replace run_replay -> ReplayReport with Default::default()
@@ -59,91 +59,17 @@
     initial_state: &PhysicalState,
     initial_agent_state: &AgentState,
     log: &EventLog,
     context: &ChecksumContext,
     expected_final_state: Option<&PhysicalState>,
     expected_checksum: Option<PhysicalChecksum>,
     expected_agent_checksum: Option<AgentStateChecksum>,
 ) -> ReplayReport {
-    let initial_checksum = compute_physical_checksum(initial_state, context).checksum;
-    let rebuild = rebuild_projection(
-        initial_state,
-        initial_agent_state,
-        log,
-        context,
-        expected_final_state,
-    );
-    let diagnostic_event_count = log
-        .events()
-        .iter()
-        .filter(|event| event.stream != EventStream::World)
-        .count();
-    let expected_state_diff = expected_final_state
-        .map(|expected| diff_physical_state(expected, &rebuild.final_state))
-        .unwrap_or_default();
-    let state_diff = if expected_state_diff.is_empty() {
-        rebuild.state_diff.clone()
-    } else {
-        expected_state_diff
-    };
-    let first_divergence = first_divergence_detail(&state_diff, log, rebuild.event_count_applied);
-    let checksum_matches = expected_checksum
-        .as_ref()
-        .map(|expected| expected == &rebuild.final_checksum)
-        .unwrap_or(true);
-    let agent_checksum_matches = expected_agent_checksum
-        .as_ref()
-        .map(|expected| expected == &rebuild.final_agent_checksum)
-        .unwrap_or(true);
-    let matches_expected = checksum_matches
-        && agent_checksum_matches
-        && state_diff.is_empty()
-        && rebuild.unsupported_versions.is_empty()
-        && rebuild.unsupported_epistemic_versions.is_empty()
-        && rebuild.unsupported_agent_versions.is_empty()
-        && rebuild.invariant_violations.is_empty()
-        && rebuild.epistemic_application_errors.is_empty()
-        && rebuild.agent_application_errors.is_empty()
-        && rebuild.decision_context_hash_failures.is_empty();
-    let epistemic_projection_version = rebuild
-        .final_epistemic_projection
-        .projection_version()
-        .as_str()
-        .to_string();
-
-    ReplayReport {
-        fixture_id: context.fixture_id.clone(),
-        content_manifest_id: ContentManifestId::new(context.content_version.as_str()).unwrap(),
-        initial_checksum,
-        event_count: rebuild.event_count_applied,
-        diagnostic_event_count,
-        unsupported_versions: rebuild.unsupported_versions,
-        unsupported_epistemic_versions: rebuild.unsupported_epistemic_versions,
-        application_errors: rebuild.invariant_violations,
-        epistemic_application_errors: rebuild.epistemic_application_errors,
-        unsupported_agent_versions: rebuild.unsupported_agent_versions,
-        agent_application_errors: rebuild.agent_application_errors,
-        decision_context_hash_failures: rebuild.decision_context_hash_failures,
-        final_checksum: rebuild.final_checksum,
-        final_epistemic_checksum: rebuild.final_epistemic_checksum,
-        epistemic_projection_version,
-        final_agent_checksum: rebuild.final_agent_checksum,
-        agent_projection_version: rebuild
-            .final_agent_checksum_report
-            .projection_version
-            .as_str()
-            .to_string(),
-        expected_agent_checksum,
-        agent_checksum_matches,
-        expected_checksum,
-        matches_expected,
-        state_diff,
-        first_divergence,
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn first_divergence_detail(
     state_diff: &[String],
     log: &EventLog,
     event_count_applied: usize,
 ) -> Option<ReplayDivergenceDetail> {
     let first_diff = state_diff.first()?;


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/replay/report.rs` has changed (1781911387.463923396s, 6s after last build at 1781911381.447923423s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `compute_physical_checksum`
 --> crates/tracewake-core/src/replay/report.rs:2:5
  |
2 |     compute_physical_checksum, AgentStateChecksum, ChecksumContext, PhysicalChecksum,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::events::EventStream`
 --> crates/tracewake-core/src/replay/report.rs:6:5
  |
6 | use crate::events::EventStream;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `diff_physical_state` and `rebuild_projection`
 --> crates/tracewake-core/src/replay/report.rs:8:30
  |
8 | use crate::replay::rebuild::{diff_physical_state, rebuild_projection, Phase3AReplayFailure};
  |                              ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::events::EventStream`
 --> crates/tracewake-core/src/replay/report.rs:6:5
  |
6 | use crate::events::EventStream;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ReplayReport: Default` is not satisfied
  --> crates/tracewake-core/src/replay/report.rs:67:5
   |
67 |     Default::default() /* ~ changed by cargo-mutants ~ */
   |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `ReplayReport`
  --> crates/tracewake-core/src/replay/report.rs:32:1
   |
32 | pub struct ReplayReport {
   | ^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 3 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 3 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 2 warnings (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
